--- a/src/main/resources/chooseMap.fxml
+++ b/src/main/resources/chooseMap.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -9,46 +10,54 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="510.0" prefWidth="457.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
+<AnchorPane prefHeight="550" prefWidth="470" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
    <children>
-      <RadioButton fx:id="rbmap1" layoutX="79.0" layoutY="165.0" mnemonicParsing="false" onAction="#chooseMap" prefHeight="28.0" prefWidth="77.0" text="mappa 1">
+      <ImageView fitHeight="550.0" fitWidth="470.0" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@back.jpg" />
+         </image>
+         <rotationAxis>
+            <Point3D />
+         </rotationAxis>
+      </ImageView>
+      <RadioButton fx:id="rbmap1" layoutX="79.0" layoutY="165.0" mnemonicParsing="false" onAction="#chooseMap" prefHeight="28.0" prefWidth="77.0" text="Map 1" textFill="#f1f1f1">
          <toggleGroup>
             <ToggleGroup fx:id="mappaGroup" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton fx:id="rbmap2" layoutX="326.0" layoutY="165.0" mnemonicParsing="false" onAction="#chooseMap" prefHeight="28.0" prefWidth="77.0" text="mappa 2" toggleGroup="$mappaGroup" />
-      <RadioButton fx:id="rbmap3" layoutX="82.0" layoutY="365.0" mnemonicParsing="false" onAction="#chooseMap" prefHeight="28.0" prefWidth="71.0" text="mappa 3" toggleGroup="$mappaGroup" />
-      <RadioButton fx:id="rbmap4" layoutX="327.0" layoutY="365.0" mnemonicParsing="false" onAction="#chooseMap" prefHeight="28.0" prefWidth="77.0" text="mappa 4" toggleGroup="$mappaGroup" />
-      <ImageView fx:id="mappa1prev" fitHeight="151.0" fitWidth="200.0" layoutX="17.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+      <RadioButton fx:id="rbmap2" layoutX="326.0" layoutY="165.0" mnemonicParsing="false" onAction="#chooseMap" prefHeight="28.0" prefWidth="77.0" text="Map 2" textFill="#f1f1f1" toggleGroup="$mappaGroup" />
+      <RadioButton fx:id="rbmap3" layoutX="82.0" layoutY="365.0" mnemonicParsing="false" onAction="#chooseMap" prefHeight="28.0" prefWidth="71.0" text="Map 3" textFill="#f1f1f1" toggleGroup="$mappaGroup" />
+      <RadioButton fx:id="rbmap4" layoutX="327.0" layoutY="365.0" mnemonicParsing="false" onAction="#chooseMap" prefHeight="28.0" prefWidth="77.0" text="Map 4" textFill="#f1f1f1" toggleGroup="$mappaGroup" />
+      <ImageView fx:id="mappa1prev" fitHeight="151.0" fitWidth="200.0" layoutX="17.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="20.0">
          <image>
             <Image url="@mappa.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="mappa2prev" fitHeight="151.0" fitWidth="211.0" layoutX="242.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="mappa2prev" fitHeight="151.0" fitWidth="211.0" layoutX="242.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="20.0">
          <image>
             <Image url="@mappa2.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="mappa3prev" fitHeight="152.0" fitWidth="219.0" layoutX="17.0" layoutY="203.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="mappa3prev" fitHeight="152.0" fitWidth="219.0" layoutX="17.0" layoutY="203.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="20.0">
          <image>
             <Image url="@mappa3.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="mappa4prev" fitHeight="177.0" fitWidth="200.0" layoutX="242.0" layoutY="203.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="mappa4prev" fitHeight="177.0" fitWidth="200.0" layoutX="242.0" layoutY="203.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="20.0">
          <image>
             <Image url="@mappa4.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="29.0" layoutY="400.0" prefHeight="28.0" prefWidth="100.0" text="SKULL'S NUMBER" textAlignment="RIGHT" />
-      <Label layoutX="288.0" layoutY="406.0" prefHeight="17.0" prefWidth="110.0" text="SUDDEN DEATH?" />
-      <TextField fx:id="skulls" layoutX="17.0" layoutY="438.0" onAction="#skullCheck" promptText="FROM 5 TO 8" />
+      <Label layoutX="29.0" layoutY="400.0" prefHeight="28.0" prefWidth="145.0" text="SKULL'S NUMBER" textAlignment="RIGHT" textFill="#f1f1f1" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="20.0" />
+      <Label layoutX="288.0" layoutY="406.0" prefHeight="21.0" prefWidth="127.0" text="SUDDEN DEATH?" textFill="#f1f1f1" AnchorPane.bottomAnchor="100.0" />
+      <TextField fx:id="skulls" layoutX="17.0" layoutY="446.0" onAction="#skullCheck" promptText="FROM 5 TO 8" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="20.0" />
       <Label fx:id="errorSkulls" layoutX="29.0" layoutY="475.0" prefHeight="17.0" prefWidth="110.0" text="FROM 5 TO 8" textFill="RED" visible="false" />
-      <RadioButton fx:id="suddenDeathYes" layoutX="315.0" layoutY="442.0" mnemonicParsing="false" text="YES">
+      <RadioButton fx:id="suddenDeathYes" layoutX="315.0" layoutY="442.0" mnemonicParsing="false" text="YES" textFill="#f1f1f1" AnchorPane.bottomAnchor="68.0">
          <toggleGroup>
             <ToggleGroup fx:id="suddenDeathGroup" />
          </toggleGroup></RadioButton>
-      <RadioButton fx:id="suddenDeathNo" layoutX="316.0" layoutY="475.0" mnemonicParsing="false" text="NO" toggleGroup="$suddenDeathGroup" />
-      <Button fx:id="sendButton" layoutX="203.0" layoutY="447.0" mnemonicParsing="false" onAction="#sendSetting" text="SEND" />
+      <RadioButton fx:id="suddenDeathNo" layoutX="316.0" layoutY="475.0" mnemonicParsing="false" text="NO" textFill="#f1f1f1" toggleGroup="$suddenDeathGroup" AnchorPane.bottomAnchor="35.0" />
+      <Button fx:id="sendButton" layoutX="211.0" layoutY="489.0" mnemonicParsing="false" onAction="#sendSetting" text="SEND" AnchorPane.bottomAnchor="30.0" />
 
    </children>
 </AnchorPane>
