--- a/src/main/resources/WaitingRoom.fxml
+++ b/src/main/resources/WaitingRoom.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="378.0" prefWidth="504.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
+<AnchorPane prefHeight="375.0" prefWidth="505.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
    <children>
-      <ImageView fx:id="waitingIm" fitHeight="396.0" fitWidth="529.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="-12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-17.0" AnchorPane.topAnchor="0.0">
+      <ImageView fx:id="waitingIm" fitHeight="430.0" fitWidth="570.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
             <Image url="@Waiting_web.jpg" />
          </image>
       </ImageView>
-      <Label fx:id="relaxLabel" layoutX="21.0" layoutY="56.0" prefHeight="82.0" prefWidth="498.0" text="RELAX AND WAITING FOR OTHER PLAYERS" textFill="WHITE">
+      <Label fx:id="relaxLabel" layoutX="26.0" layoutY="56.0" prefHeight="82.0" prefWidth="482.0" text="RELAX AND WAITING FOR OTHER PLAYERS" textFill="WHITE" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="55.0">
          <font>
             <Font size="25.0" />
          </font>
