--- a/src/main/resources/chooseCharacter.fxml
+++ b/src/main/resources/chooseCharacter.fxml
@@ -7,44 +7,53 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
    <children>
-      <Label layoutX="240.0" layoutY="31.0" prefHeight="57.0" prefWidth="121.0" text="Choose your character" textAlignment="CENTER" />
-      <RadioButton fx:id="rbSprog" disable="true" layoutX="85.0" layoutY="154.0" mnemonicParsing="false" onAction="#chooseCharacter" text="SPROG">
+      <ImageView fitHeight="450.0" fitWidth="680.0" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@back.jpg" />
+         </image>
+      </ImageView>
+      <Label layoutX="202.0" layoutY="25.0" prefHeight="57.0" prefWidth="192.0" text="Choose your character" textAlignment="CENTER" textFill="#f1f1f1" AnchorPane.leftAnchor="240.0" AnchorPane.rightAnchor="240.0" AnchorPane.topAnchor="25.0">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Label>
+      <RadioButton fx:id="rbSprog" disable="true" layoutX="85.0" layoutY="154.0" mnemonicParsing="false" onAction="#chooseCharacter" text="SPROG" textFill="#f1f1f1" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="160.0">
          <toggleGroup>
             <ToggleGroup fx:id="rbChooseCharacter" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton fx:id="rbViolet" disable="true" layoutX="85.0" layoutY="347.0" mnemonicParsing="false" onAction="#chooseCharacter" text="VIOLET" toggleGroup="$rbChooseCharacter" />
-      <RadioButton fx:id="rbStruct" disable="true" layoutX="250.0" layoutY="245.0" mnemonicParsing="false" onAction="#chooseCharacter" text=":D-STRUCT-OR" toggleGroup="$rbChooseCharacter" />
-      <RadioButton fx:id="rbDozer" disable="true" layoutX="455.0" layoutY="163.0" mnemonicParsing="false" onAction="#chooseCharacter" text="DOZER" toggleGroup="$rbChooseCharacter" />
-      <RadioButton fx:id="rbBanshee" disable="true" layoutX="455.0" layoutY="347.0" mnemonicParsing="false" onAction="#chooseCharacter" text="BANSHEE" toggleGroup="$rbChooseCharacter" />
-      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="49.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <RadioButton fx:id="rbViolet" disable="true" layoutX="85.0" layoutY="347.0" mnemonicParsing="false" onAction="#chooseCharacter" text="VIOLET" textFill="#f1f1f1" toggleGroup="$rbChooseCharacter" AnchorPane.leftAnchor="70.0" AnchorPane.topAnchor="360.0" />
+      <RadioButton fx:id="rbStruct" disable="true" layoutX="271.0" layoutY="245.0" mnemonicParsing="false" onAction="#chooseCharacter" prefHeight="21.0" prefWidth="130.0" text=":D-STRUCT-OR" textFill="#f1f1f1" toggleGroup="$rbChooseCharacter" AnchorPane.leftAnchor="271.0" AnchorPane.rightAnchor="279.0" />
+      <RadioButton fx:id="rbDozer" disable="true" layoutX="455.0" layoutY="163.0" mnemonicParsing="false" onAction="#chooseCharacter" text="DOZER" textFill="#f1f1f1" toggleGroup="$rbChooseCharacter" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="160.0" />
+      <RadioButton fx:id="rbBanshee" disable="true" layoutX="455.0" layoutY="347.0" mnemonicParsing="false" onAction="#chooseCharacter" text="BANSHEE" textFill="WHITE" toggleGroup="$rbChooseCharacter" AnchorPane.rightAnchor="70.0" AnchorPane.topAnchor="360.0" />
+      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="49.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="20.0">
          <image>
             <Image url="@characters/sprogGreen.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="50.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="50.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="210.0">
          <image>
             <Image url="@characters/violetViolet.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="237.0" layoutY="97.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="237.0" layoutY="97.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="270.0" AnchorPane.rightAnchor="270.0">
          <image>
             <Image url="@characters/structYellow.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="427.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="427.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="20.0">
          <image>
             <Image url="@characters/dozerGrey.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="426.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="133.0" fitWidth="177.0" layoutX="426.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="210.0">
          <image>
             <Image url="@characters/banshBlue.jpg" />
          </image>
       </ImageView>
-      <Button layoutX="188.0" layoutY="300.0" mnemonicParsing="false" onAction="#chooseYourCharacter" prefHeight="57.0" prefWidth="229.0" text="SHOW POSSIBLE CHARACTER" />
+      <Button layoutX="188.0" layoutY="318.0" mnemonicParsing="false" onAction="#chooseYourCharacter" prefHeight="57.0" prefWidth="229.0" text="SHOW POSSIBLE CHARACTER" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="220.0" />
    </children>
 </AnchorPane>
