--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -668,5 +668,6 @@
       <Button fx:id="cell30" layoutX="552.0" layoutY="402.0" mnemonicParsing="false" onAction="#sendCellMessage" prefHeight="110.0" prefWidth="99.0" />
       <Button fx:id="cell31" layoutX="547.0" layoutY="272.0" mnemonicParsing="false" onAction="#sendCellMessage" prefHeight="110.0" prefWidth="99.0" />
       <Button fx:id="cell32" layoutX="559.0" layoutY="144.0" mnemonicParsing="false" onAction="#sendCellMessage" prefHeight="94.0" prefWidth="99.0" />
+      <Label fx:id="labelMatchID" layoutX="1.0" layoutY="493.0" prefHeight="49.0" prefWidth="142.0" textFill="RED" />
    </children>
 </AnchorPane>
