--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -655,7 +655,7 @@
       <ImageView fx:id="playerSkull4" fitHeight="31.0" fitWidth="22.0" layoutX="305.0" layoutY="660.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="playerSkull5" fitHeight="31.0" fitWidth="22.0" layoutX="333.0" layoutY="660.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="playerSkull6" fitHeight="31.0" fitWidth="22.0" layoutX="363.0" layoutY="660.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="bselectCharacter" layoutX="332.0" layoutY="602.0" mnemonicParsing="false" onAction="#selectCharacter" prefHeight="25.0" prefWidth="106.0" text="CHARACTER" />
+      <Button fx:id="bselectCharacter" layoutX="332.0" layoutY="602.0" mnemonicParsing="false" onAction="#selectCharacter" prefHeight="25.0" prefWidth="106.0" text="CHARACTER" visible="false" />
       <Button fx:id="cell02" layoutX="153.0" layoutY="141.0" mnemonicParsing="false" onAction="#sendCellMessage" prefHeight="104.0" prefWidth="86.0" />
       <Button fx:id="cell01" layoutX="148.0" layoutY="271.0" mnemonicParsing="false" onAction="#sendCellMessage" prefHeight="104.0" prefWidth="99.0" />
       <Button fx:id="cell00" layoutX="139.0" layoutY="413.0" mnemonicParsing="false" onAction="#sendCellMessage" prefHeight="104.0" prefWidth="99.0" />
