--- a/src/main/resources/disconnected.fxml
+++ b/src/main/resources/disconnected.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -11,7 +12,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Label fx:id="labelMatchId" layoutX="129.0" layoutY="157.0" prefHeight="52.0" prefWidth="147.0" />
-      <Label layoutX="161.0" layoutY="28.0" prefHeight="52.0" prefWidth="82.0" />
+      <Label fx:id="labelMatchId" layoutX="129.0" layoutY="43.0" prefHeight="52.0" prefWidth="147.0" textFill="RED" />
+      <Button fx:id="bshowMyMatchID" layoutX="91.0" layoutY="162.0" mnemonicParsing="false" onAction="#showMyMatchID" prefHeight="25.0" prefWidth="223.0" style="-fx-background-color: transparent;" text="TAP TO SEE YOUR MATCH ID" />
    </children>
 </AnchorPane>
