--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -43,7 +43,7 @@
          </Button>
       <Button fx:id="powerupDeck" disable="true" layoutX="709.0" layoutY="21.0" mnemonicParsing="false" prefHeight="72.0" prefWidth="51.0" />
       <Label fx:id="mylabel" layoutX="120.0" layoutY="156.0" prefHeight="29.0" prefWidth="51.0" />
-      <Button fx:id="showMap" layoutX="677.0" layoutY="278.0" mnemonicParsing="false" onAction="#showMap" prefHeight="57.0" prefWidth="142.0" text="READY??" AnchorPane.leftAnchor="677.0" AnchorPane.topAnchor="278.0">
+      <Button fx:id="showMap" layoutX="677.0" layoutY="278.0" mnemonicParsing="false" onAction="#startGame" prefHeight="57.0" prefWidth="142.0" text="READY??" AnchorPane.leftAnchor="677.0" AnchorPane.topAnchor="278.0">
          <font>
             <Font size="24.0" />
          </font></Button>
@@ -112,17 +112,17 @@
                         <Button fx:id="bDiscardWeapon1" layoutX="125.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardWeapon" prefHeight="25.0" prefWidth="31.0" />
                         <Button fx:id="bDiscardWeapon2" layoutX="315.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardWeapon" prefHeight="25.0" prefWidth="31.0" />
                         <Button fx:id="bDiscardWeapon3" layoutX="505.0" layoutY="2.0" mnemonicParsing="false" onAction="#discardWeapon" prefHeight="25.0" prefWidth="31.0" />
-                        <Button fx:id="addFire1" layoutX="98.0" layoutY="169.0" mnemonicParsing="false" onAction="#addFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
+                        <Button fx:id="addFire1" layoutX="98.0" layoutY="169.0" mnemonicParsing="false" onAction="#selectFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
                            <font>
                               <Font size="10.0" />
                            </font>
                         </Button>
-                        <Button fx:id="addFire2" layoutX="287.0" layoutY="169.0" mnemonicParsing="false" onAction="#addFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
+                        <Button fx:id="addFire2" layoutX="287.0" layoutY="169.0" mnemonicParsing="false" onAction="#selectFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
                            <font>
                               <Font size="10.0" />
                            </font>
                         </Button>
-                        <Button fx:id="addFire3" layoutX="478.0" layoutY="170.0" mnemonicParsing="false" onAction="#addFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
+                        <Button fx:id="addFire3" layoutX="478.0" layoutY="170.0" mnemonicParsing="false" onAction="#selectFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
                            <font>
                               <Font size="10.0" />
                            </font>
